update task getTimeRange
